# thumb-rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  STRUCTURE.md  WINDOWS_PLAN.md
.github/workflows/: ci.yml  thumbnail-test.yml  vlc-test.yml
examples/: cli.rs
src/: error.rs  lib.rs
src/platform/: macos.rs  windows.rs
tests/: integration.rs
