[package]
name = "thumb-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "High-performance cross-platform thumbnail extraction"
repository = "https://github.com/iamzubin/thumb-rs"

[dependencies]
image = "0.25"
thiserror = "2"
once_cell = "1.20"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "cli"
path = "examples/cli.rs"
