[package]
name = "thumb-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance cross-platform thumbnail extraction for macOS and Windows"
repository = "https://github.com/iamzubin/thumb-rs"

[dependencies]
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSError"] }
objc2-core-graphics = { version = "0.3", features = ["CGDataProvider"] }
objc2-core-foundation = { version = "0.3", features = ["CFData", "CFRunLoop"] }
objc2-quick-look-thumbnailing = { version = "0.3", features = ["default"] }
dispatch2 = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
] }

[dev-dependencies]
tempfile = "3"
image = "0.25"

[[example]]
name = "cli"
path = "examples/cli.rs"
